k8s/roles.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: gateway
