k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gateway
spec:
  selector:
    matchLabels:
      app: api-gateway
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'false'
      labels:
        app: api-gateway
        version: 1.0.0
    spec:
      containers:
      - name: api-gateway
        image: hub.pirat.app/api-gateway
        imagePullPolicy: Always
        args:
          - -addr
          - 0.0.0.0:8080
          - -authServer
          - auth-gateway:5009
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: api-gateway
spec:
  selector:
    app: api-gateway
  ports:
  - port: 8080
    name: http-gateway
    targetPort: 8080
