k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  name: api-gateway
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
  labels:
    name: api-gateway
spec:
  tls:
    - hosts:
      - api.devopshaven.com
      secretName: api-dh-tls
  rules:
  - host: api.devopshaven.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: api-gateway
            port:
              number: 8080
